add_custom_target(AutoGen)

add_subdirectory(Backend)
add_subdirectory(Backends)
add_subdirectory(Base)
add_subdirectory(CodeGen)
add_subdirectory(Converter)
add_subdirectory(ExecutionContext)
add_subdirectory(ExecutionEngine)
add_subdirectory(Graph)
add_subdirectory(IR)
add_subdirectory(Importer)
if(GLOW_WITH_LLVMIRCODEGEN)
    add_subdirectory(LLVMIRCodeGen)
endif()
add_subdirectory(Optimizer)
add_subdirectory(Quantization)
add_subdirectory(Runtime)
add_subdirectory(Support)
add_subdirectory(Onnxifi)
add_subdirectory(Partitioner)
